--- a/HiddenVilla_Server/appsettings.json
+++ b/HiddenVilla_Server/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=HiddenVilla;TrustedConnection=True;MultipleActiveResultSets=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
