--- a/HiddenVilla_Server/appsettings.json
+++ b/HiddenVilla_Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=HiddenVilla;TrustedConnection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=HiddenVilla;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
