Sec 7 - Install Font Awesome https://fontawesome.com/

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,23 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/HiddenVilla_Server/wwwroot/RoomImages/f9d8c92c-5ff1-4a1b-9e7f-716c8109f9de.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/cf1d00d6-4e8c-4b82-8cde-5546a08d96f9.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/ce465133-0da7-4a25-913a-9a72d355af66.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/bc974e09-0b79-4771-9200-6b7a5b62ee1c.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/b4481f4b-0e40-4ae8-b76d-6a8fff84179f.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/9ce5f764-3d57-45ac-a99f-a847635cc1ae.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/8d0cc54d-3137-4d24-abad-f8cde8a8afea.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/8620f8ed-41fe-4b74-854b-a1ae0e5d7b8b.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/7beabb3c-06e1-4db0-8c55-d67d8888369b.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/66a101a2-8918-48b3-85dd-6d461a4b567c.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/641dce1f-8efe-4bc0-a54f-90bc27679262.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/6230dffb-b786-4ec1-bf14-a95779464e03.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/5c70b169-9758-4b55-b531-a86e9dc36385.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/4a1f52d5-1335-4cac-b5c6-f8dd1ac48ec4.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/36c899ec-1d4f-4159-b37b-907790a0bce6.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/29ffbac8-fc33-48c1-acdf-23185d2d32a3.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/23cbf5fb-b1b8-4aab-81d9-8e2d83a66117.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/1ed7eda4-1afc-4d4f-9b76-0294844526ad.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/1933ede5-1efa-466d-bf26-8b964bd820f5.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/077a3187-b92e-4ec2-84b1-3fa1203c8185.jpg
