Sec 7 - Change Image Path/Url

--- a/.gitignore
+++ b/.gitignore
@@ -381,3 +381,6 @@ FodyWeavers.xsd
 /HiddenVilla_Server/wwwroot/RoomImages/1ed7eda4-1afc-4d4f-9b76-0294844526ad.jpg
 /HiddenVilla_Server/wwwroot/RoomImages/1933ede5-1efa-466d-bf26-8b964bd820f5.jpg
 /HiddenVilla_Server/wwwroot/RoomImages/077a3187-b92e-4ec2-84b1-3fa1203c8185.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/c7b6816d-cfb2-4c24-b9d8-de1ace7a4d9a.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/93d03844-8430-4a99-b005-224b37745764.jpg
+/HiddenVilla_Server/wwwroot/RoomImages/40397021-def7-4dfe-bf65-0fd2aebf80f1.jpg
